fix(article): prevent article body from overflowing

--- a/design/source/stylesheets/components/_article.scss
+++ b/design/source/stylesheets/components/_article.scss
@@ -21,6 +21,7 @@
 
 .article-content__main {
   flex: 1;
+  width: 100%;
   padding-right: double($base-spacing-unit);
 }
 
